stage 3 completed, game works with 1 player